Add TTCrowd campaigns to Community Funding
